2005-01-17  Andreas Madsack  <bolsog@users.sf.net>

        * beta 6 released

	* delete-dialog und functions added
	* fixed a few problems in preferences and cfg-save
	* some cleanup
	* fixes
	* updated german (de.po) translations
	* known problem with saving of wave on ppc-architecture (thx olly for testing)
	
2005-01-16  Andreas Madsack  <bolsog@users.sf.net>

	* added a Set-feature:
	  - user can save which curves are shown/not shown
	  - insert menu-entries for each set
	  - write all in local config-file (.imskpe)
	* german translation for todays addons :)
	* todo: delete of this menu-entries without editing config-file
	* first version of an icon added

2005-01-13  Andreas Madsack  <bolsog@users.sf.net>

	* bugfixes

2005-01-11  Andreas Madsack  <bolsog@users.sf.net>

	* tests with -pedantic-compile and some fixes

2005-01-09  Andreas Madsack  <bolsog@users.sf.net>

        * beta 5 released

	* wav-draw-area added
	* convert optimized
	* fixed ruler bug in drawareas
	* many cleanups

2005-01-07  Andreas Madsack  <bolsog@users.sf.net>

	* complete debug of wav-output-procedure:
	  * fixed wav-write-problems on win32!
	  * fixed endian-probs on non-intel (hopefully!)
	  * known issue: to short wav-files (last frame missing)!
	                 this is caused by silly duration-values (519, 639, ...)
	                 when added 1 (520, 640, ...) all is fine!
	* fixed a silly bug in parwav (out was not set to zero when it should be zero!)
	* few cleanups
	
2004-12-20  Andreas Madsack  <bolsog@users.sf.net>

	* beta4 released
	
	* last bugfixes

2004-12-19  Andreas Madsack  <bolsog@users.sf.net>

	* fixed a few win32-bugs
	* fixed unicode-problems with pango
	* now using gtk2.4 buttons for fonts and colors
	
2004-12-16  Andreas Madsack  <bolsog@users.sf.net>

	* improved FileOpenDialog (added filter: all files, par files)
	* improved FileSaveDialog (added pre-entry, added filetype)
	  -> SaveAs is now used for par- and wav-files!
